# vector-vapi-jni-jvmci-panama

./: .gitignore  ComplexVectorOperations-JDK17-AverageTime.csv  ComplexVectorOperations-JDK22-AverageTime.csv  KnnBenchmarkResults-JDK17-AverageTime.csv  KnnBenchmarkResults-JDK22-AverageTime.csv  MultiArrayOperations-JDK22-AverageTime.csv  MultiArrayOperations-JVMCI-JDK17-AverageTime.csv  MultiVectorOperationsBenchmarkResults-JDK17-AverageTime.csv  MultiVectorOperationsBenchmarkResults-JDK22-AverageTime.csv  ProductQuantizationBenchmarkResults-JDK17-AverageTime.csv  ProductQuantizationBenchmarkResults-JDK22-AverageTime.csv  README.md  SingleArrayOperations-AverageTime.csv  SingleArrayOperations-JDK22-AverageTime.csv  SingleArrayOperations-JVMCI-JDK17-AverageTime.csv  SingleVectorOperationsBenchmarkResults-JDK17-AverageTime.csv  SingleVectorOperationsBenchmarkResults-JDK22-AverageTime.csv  build.sh  env.sh  pom.xml  run-single-array-ops.sh  run.sh
src/main/cpp/nativemath/: CMakeLists.txt  build.sh  nativemath.cpp  nativemath.h  ru_ifmo_se_jni_NativeMathJni.h
src/main/java/ru/ifmo/se/: BenchmarkRunner.java
src/main/java/ru/ifmo/se/benchmarks/: ComplexVectorOperations.java  KmeansBenchmark.java  KnnBenchmark.java  MultiArrayOperations.java  MultiVectorOperationsBenchmark.java  ProductQuantizationBenchmark.java  SingleArrayOperations.java  SingleVectorOperationsBenchmark.java
src/main/java/ru/ifmo/se/calculators/: Calculator.java  NativeJniCalculator.java  NativeJvmciCalculator.java  NativePanamaCalculator.java  PlainJavaCalculator.java  VectorApiCalculator.java
(+14 files in other folders)
